2002-01-25  Alex Larsson  <alexl@redhat.com>

	* important_docs.xml:
	New file.
	
	* Makefile.am:
	Install important_docs.xml

	* src/yelp-view-toc.c:
	Parse important_docs.xml instead of hardcoding them
	
	* configure.in:
	Remove "hu" from ALL_LINGUAS, as it breaks the build.

2002-01-25  Ole Laursen  <olau@hardworking.dk>

	* configure.in: Added "da" to ALL_LINGUAS.

2002-01-25  Szabolcs Ban  <shooby@gnome.hu>

        * po/hu.po: Added Hungarian translations from Emese Kovacs
        <emese@gnome.hu>, cvs troubles solved, sorry for that

Fri Jan 25 12:43:19 2002  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Remove 'hu' from ALL_LINGUAS since
	the po file wasn't actually added. 

2002-01-25  Szabolcs Ban  <shooby@gnome.hu>

        * po/hu.po: Added Hungarian translations from Emese Kovacs
        <emese@gnome.hu>

2002-01-24  Alex Larsson  <alexl@redhat.com>

        * src/yelp-util.[ch]:
	Add yelp_util_find_toplevel().
	
	* src/yelp-view-content.[ch]:
	Add some tree support.

	* src/yelp-view-toc.c:
	Add scrollkeeper support.

	* src/yelp-window.c:
	Remove old crap, make content view work again.
	
2002-01-24  Alex Larsson  <alexl@redhat.com>

	* src/yelp-view-toc.c:
	Add initial scrollkeeper support.

2002-01-24  Alexander Shopov  <al_shopov@web.bg>

	* configure.in (ALL_LINGUAS): added "bg"

2002-01-23  Alex Larsson  <alexl@redhat.com>

	* src/yelp-scrollkeeper.[ch]:
	Implement seriesid lookup.

	* src/yelp-view-toc.c:
	Fix the startpage to contain the seriesid docs, and
	be more dynamic.

2002-01-23  Alex Larsson  <alexl@redhat.com>

	* src/yelp-util.c:
	Change path separator to '/'.

	* src/yelp-view-toc.c:
	Implement simple toc:info URL handler.

2002-01-23  Alex Larsson  <alexl@redhat.com>

	* src/yelp-util.c:
	Clean up section->name usage
	
	* src/yelp-view-toc.c:
	Clean up and fix double free in yelp_view_toc_full_path_name()

2002-01-22  Alex Larsson  <alexl@redhat.com>

	* src/yelp-man.c (yelp_man_push_initial_tree):
	Fix silly bug.
